2006-02-23  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Better 'dist' target.

2006-02-23  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.1.

2006-02-23  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_setPrinterPublished): Implemented.
	(Connection_getPrinters): Add 'printer-is-shared' Boolean into
	requested attributes.

	* cupsmodule.c (cups_getUser): Implemented.
	(cups_getServer): Implemented.
	(cups_getPort): Implemented.
	(cups_getEncryption): Implemented.

	* cupsppd.h (PPD): Moved this here from..
	* cupsppd.c: ..here.
	(PPD_writeFd): No longer static.
	(PPD_findOption): Implemented.

	* cupsconnection.c (Connection_addPrinter): Accept 'ppd' keyword,
	for cups.PPD object.

	* cupsppd.c (PPD_init): Open handle to PPD file.
	(PPD_dealloc): Close it.
	(PPD_writeFd): Implemented.

	* cupsmodule.c (cups_setPort): Implemented.

2006-02-22  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_addPrinterToClass): Implemented.
	(Connection_deletePrinterFromClass): Implemented.
	(Connection_addPrinter): Added 'info', 'location', and 'device'
	keywords.
	(add_modify_printer_request): New utility function.
	(Connection_setPrinterInfo): Implemented.
	(Connection_setPrinterLocation): Implemented.
	(Connection_getClasses): Implemented.

	* cupsmodule.c (initcups): Added printer states constants.

	* cupsconnection.c: More consistent error handling.
	(do_printer_request): Fixed ipp_t leak.
	(Connection_addPrinter): Likewise.
	(Connection_setPrinterDevice): Likewise.
	(set_ipp_error): Make use of cupsLastErrorString conditional on
	CUPS 1.2.

	* cupsconnection.c (Connection_putFile): Fixed ipp_t leak.
	(set_ipp_error): "i" -> "(is)" for IPPError.

	* cupsmodule.h: New file.

	* cupsconnection.c (Connection_getDevices): Implemented.

2006-02-21  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPPDs): Implemented.

	* cupsppd.c (Group_getOptions): Return a list, not a dict, to
	preserve the order of options.