@@ -1,3 +1,9 @@
+2006-02-27  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsconnection.c (get_printer_attributes_request): New function.
+	(build_list_from_attribute_strings): New function.
+	(Connection_getPrinterAttributes): Implemented.
+
 2006-02-23  Tim Waugh  <twaugh@redhat.com>
 
 	* Makefile: Better 'dist' target.
